# mecab-server

./: Cargo.toml  Dockerfile  debug.sh
.github/workflows/: build-and-publish.yml
mecab-server/: Cargo.toml
mecab-server/src/: handler.rs  main.rs  middleware.rs
mecab-server/src/shared/: api_error.rs
mecab-wrapper/: Cargo.toml
mecab-wrapper/src/: parser.rs
mecab-wrapper/src/parser/: mecab_parser.rs  neologd_parser.rs
src/: lib.rs  main.rs  shared.rs
src/shared/: api_error.rs  err_msg_json_gen.rs
