[package]
name = "mecab-server"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1"
axum = { version = "0.5", features = ["headers"] }
chrono = "0.4"
hyper = "0.14"
itertools = "0.10"
log = "0.4"
mecab = "0.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.4.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
