[package]
name = "mecab-server"
version = "0.1.0"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true

argh = "0.1"
axum = { version = "0.5", features = ["headers"] }
hyper = "0.14"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
