[package]
name = "mecab-server"
version = "0.1.0"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
itertools.workspace = true
thiserror.workspace = true

mecab-wrapper = { path = "../mecab-wrapper" }

argh = "0.1"
axum = { version = "0.5", features = ["headers"] }
hyper = "0.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
