[package]
name = "mecab-wrapper"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
itertools.workspace = true
thiserror.workspace = true

mecab = "0.1"
